--- a/src/typography.css
+++ b/src/typography.css
@@ -1,36 +1,46 @@
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .large-title {
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 28px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 34px;
 }
 
 .title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 18px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
 }
 
 .text-lg {
+  font-family: 'Inter';
+  font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 18px;
 }
 
 .text-md {
-  font-weight: 400;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
   font-size: 15px;
-  line-height: 17px;
+  line-height: 18px;
 }
 
 .text-rg-bd {
-  font-weight: 700;
-  font-size: 14px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
   line-height: 18px;
 }
 
@@ -40,12 +50,16 @@ a,
 div,
 input,
 .text-rg {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
 }
 
 .caption {
+  font-family: 'Inter';
+  font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
